--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@vottuscode/response-spec",
-  "version": "1.0.0",
-  "main": "dist",
+  "version": "1.0.1",
+  "main": "dist/index.js",
   "repository": "git@github.com:vottuscode/response-spec",
   "author": "Mia <vottus@vott.us>",
   "devDependencies": {
